--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@iconify-json/carbon": "^1.1.11",
     "@iconify-json/mdi": "^1.1.36",
     "@nuxtjs/algolia": "^1.3.1",
+    "@nuxtjs/google-fonts": "^2.0.0",
+    "@pinia/nuxt": "^0.4.6",
     "@unocss/nuxt": "^0.47.5",
     "@unocss/preset-icons": "^0.47.5",
     "@unocss/preset-uno": "^0.47.5",
@@ -22,10 +24,8 @@
     "instantsearch.css": "^7.4.5",
     "nuxt": "3.0.0",
     "nuxt-icon": "^0.1.8",
-    "search-insights": "^2.2.1",
-    "@pinia/nuxt": "^0.4.6",
     "pinia": "^2.0.28",
+    "search-insights": "^2.2.1",
     "shopify-buy": "^2.17.1"
-  },
-  "dependencies": {}
+  }
 }
