--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@iconify-json/carbon": "^1.1.11",
     "@iconify-json/mdi": "^1.1.36",
     "@nuxtjs/algolia": "^1.3.1",
-    "@nuxtjs/google-fonts": "^2.0.0",
     "@pinia/nuxt": "^0.4.6",
     "@unocss/nuxt": "^0.47.5",
     "@unocss/preset-icons": "^0.47.5",
     "@unocss/preset-uno": "^0.47.5",
+    "@unocss/preset-web-fonts": "^0.48.4",
     "@vueuse/core": "^9.3.1",
     "@vueuse/nuxt": "^9.3.1",
     "algoliasearch": "^4.13.1",
