--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@iconify-json/mdi": "^1.1.36",
     "@nuxtjs/algolia": "^1.3.1",
     "@pinia/nuxt": "^0.4.6",
-    "@unocss/nuxt": "^0.47.5",
+    "@unocss/nuxt": "^0.47.6",
     "@unocss/preset-icons": "^0.47.5",
     "@unocss/preset-uno": "^0.47.5",
     "@unocss/preset-web-fonts": "^0.48.4",
@@ -22,7 +22,7 @@
     "algoliasearch": "^4.13.1",
     "axios": "^0.27.2",
     "instantsearch.css": "^7.4.5",
-    "nuxt": "3.0.0",
+    "nuxt": "^3.1.1",
     "nuxt-icon": "^0.1.8",
     "pinia": "^2.0.28",
     "search-insights": "^2.2.1",
