--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@unocss/preset-icons": "^0.47.5",
     "@unocss/preset-uno": "^0.47.5",
     "@unocss/preset-web-fonts": "^0.48.4",
+    "@vite-pwa/nuxt": "^0.0.2",
     "@vueuse/core": "^9.3.1",
     "@vueuse/nuxt": "^9.3.1",
     "algoliasearch": "^4.13.1",
