--- a/package.json
+++ b/package.json
@@ -13,21 +13,24 @@
     "@iconify-json/carbon": "^1.1.11",
     "@iconify-json/mdi": "^1.1.36",
     "@nuxtjs/algolia": "^1.5.0",
+    "@nuxtjs/apollo": "^5.0.0-alpha.6",
     "@pinia/nuxt": "^0.4.6",
     "@unocss/nuxt": "^0.50.6",
     "@unocss/preset-icons": "^0.49.7",
     "@unocss/preset-uno": "^0.49.7",
     "@unocss/preset-web-fonts": "^0.49.7",
+    "@vite-pwa/nuxt": "^0.0.6",
     "@vueuse/core": "^9.3.1",
     "@vueuse/nuxt": "^9.3.1",
     "algoliasearch": "^4.13.1",
     "axios": "^1.3.3",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.2.0",
     "instantsearch.css": "^8.0.0",
     "nuxt": "^3.3.1",
     "nuxt-icon": "^0.3.2",
     "pinia": "^2.0.28",
     "search-insights": "^2.2.1",
-    "shopify-buy": "^2.17.1",
-    "@vite-pwa/nuxt": "^0.0.6"
+    "shopify-buy": "^2.17.1"
   }
 }
