Added HYgraph queries

--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "graphql": "^16.6.0",
     "graphql-request": "^5.2.0",
     "instantsearch.css": "^8.0.0",
-    "nuxt": "^3.3.1",
+    "nuxt": "^3.3.2",
     "nuxt-icon": "^0.3.2",
     "pinia": "^2.0.28",
     "search-insights": "^2.2.1",
     "shopify-buy": "^2.17.1"
+  },
+  "dependencies": {
+    "@graphcms/rich-text-html-renderer": "^0.2.0"
   }
 }
